# abt-zoo

./: .gitignore  LICENSE  README.md  _oasis  _tags  lambda-zoo.cabal  setup.ml  stack.yaml
app/: STLC.hs  STLCHKT.hs  SystemF.hs  Untyped.hs
simply-typed/: simply-typed.ml
src/: LambdaPi.hs  STLC.hs  STLCHKT.hs  SystemF.hs  SystemFOmega.hs  Untyped.hs  Util.hs
test/: LambdaPiTests.hs  STLCHKTTests.hs  STLCTests.hs  SystemFOmegaTests.hs  SystemFTests.hs  Tests.hs  UntypedTests.hs
untyped/: untyped.ml
