name:                lambda-zoo
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ak3n/lambda-zoo#readme
license:             BSD3
license-file:        LICENSE
author:              Eugene Akentev
maintainer:          ak3ntev@gmail.com
copyright:           2017 Eugene Akentev here
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Util
                     , Untyped
                     , STLC
                     , STLCHKT
                     , SystemF
  build-depends:       base >= 4.7 && < 5
                     , transformers == 0.5.2.0
                     , abt
                     , vinyl == 0.5.3
  default-language:    Haskell2010

test-suite Test
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Tests.hs
  other-modules:  UntypedTests
                , STLCTests
                , STLCHKTTests
                , SystemFTests
  build-depends:       base
                     , lambda-zoo
                     , abt
                     , transformers == 0.5.2.0
                     , vinyl == 0.5.3
                     , tasty == 0.11.2.1
                     , tasty-hunit == 0.9.2

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ak3n/lambda-zoo
